# aka_mtg-card-extractor

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
src/: card_utils.cpp  card_utils.hpp  http_client.cpp  http_client.hpp  main.cpp  set_exporter.cpp  set_exporter.hpp  set_lister.cpp  set_lister.hpp  utils.cpp  utils.hpp  zip_utils.cpp  zip_utils.hpp
tests/: README.md  test_card_utils.cpp  test_serialization.cpp  test_set_filter.cpp  test_utils.cpp  test_zip_utils.cpp
tests/mock_data/: SetList_minimal.json  TST_set.json  card_creature.json  card_minimal.json  card_multiline_text.json  card_planeswalker.json  set_empty.json  set_mixed_cards.json
tests/results/: SetList_sorted_by_releaseDate_expected.json  SetList_sorted_by_type_expected.json  TST_set_expected.md  card_creature_expected.md  card_minimal_expected.md  card_multiline_text_expected.md  card_planeswalker_expected.md  set_empty_expected.md
